--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
+    "dateformat": "^2.0.0",
     "express": "^4.14.0",
     "google-auth-library": "^0.10.0",
     "googleapis": "^16.0.0"
