--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
-    "dateformat": "^2.0.0",
     "express": "^4.14.0",
     "google-auth-library": "^0.10.0",
-    "googleapis": "^16.0.0"
+    "googleapis": "^16.0.0",
+    "moment": "^2.17.1"
   },
   "devDependencies": {
     "eslint": "^3.12.2",
